# safer-buildings

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ecr-login.bat  gdf_gate.gpkg  lambda-entrypoint.sh  pyproject.toml  requirements.py311.txt  requirements.py312.txt  requirements.py37.txt
.github/workflows/: docker-build.yml
data/rer-buildings-overture-merge-rest/: merge_building_dataset.ipynb
data/venezia-buildings-overture-merge-wfs/: critical_sites_dataset.ipynb  merge_building_dataset.ipynb
lambda/: lambda_function.py
src/flooded_buildings/: main.py  utils.py
src/safer_buildings/: __init__.py  _consts.py  _utils.py  filesystem.py  main.py  module_add_ops.py  module_additional_operations.py  module_args.py  module_exception.py  module_flood.py  module_log.py  module_logo.py  module_outputs.py  module_retriever.py  module_s3.py  module_stats.py  module_version.py  strings.py  utils.py
tests/: test-output.py  test-rimini-00.py  test-version.py  test_clsa.py
tests/unit-tests/: run-all.py  test-buildings.py  test-deb.py  test-overture.py  test-rer-rest.py  test-venezia-wfs.py
