[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safer-buildings"
version = "0.1.0"
description = "Little procedures to get buildings at risk of flooding from a flood map"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy<2",
    "geopandas",
    "overturemaps>=0.14.0",
    "leafmap",
    "swifter",
]

[project.optional-dependencies]
with_gdal = [
    "gdal @ https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp311-cp311-win_amd64.whl"
]

[project.scripts]
safer-buildings = "safer_buildings.main:main"

[project.urls]
Homepage = "https://github.com/SaferPlaces2023/safer-buildings"
Repository = "https://github.com/SaferPlaces2023/safer-buildings"
Issues = "https://github.com/SaferPlaces2023/safer-buildings/issues"