[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safer-buildings"
version = "1.0.15"
description = "Little procedures to get buildings at risk of flooding from a flood map"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv",
    "numpy<2",
    "geopandas",
    "overturemaps>=0.14.0",
    "leafmap",
    "boto3",
    "xarray",
    "rioxarray"
]

[project.optional-dependencies]
with_gdal_py37 = [
    "gdal @ https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.2-cp37-cp37m-win_amd64.whl"
]
with_gdal_py39 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2024.9.22/GDAL-3.9.2-cp39-cp39-win_amd64.whl"
]
with_gdal_py310 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2024.9.22/GDAL-3.9.2-cp310-cp310-win_amd64.whl"
]
with_gdal_py311 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2024.9.22/GDAL-3.9.2-cp311-cp311-win_amd64.whl"
]
with_gdal_py312 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2024.9.22/GDAL-3.9.2-cp312-cp312-win_amd64.whl"
]

[project.scripts]
safer-buildings = "safer_buildings.main:main"

[project.urls]
Homepage = "https://github.com/SaferPlaces2023/safer-buildings"
Repository = "https://github.com/SaferPlaces2023/safer-buildings"
Issues = "https://github.com/SaferPlaces2023/safer-buildings/issues"